# libkpass

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  configure  configure.ac
po/: ChangeLog  Makevars  POTFILES.in  en_US.po  libkpass.pot
src/: config.h.in  kpass.c  kpass.h  test1.c  test2.c  test3.c
test/: keyfile.kdb  keyfile.keyfile
